# oddseye

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  prediction_market_radar_v1_usage_tracking_engineering_doc.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607010001_initial_schema.py  202607020001_postgres_schema_types.py  202607020002_api_usage_provider_ts_index.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/codex/: __init__.py  client.py  queries.py  schemas.py
backend/app/core/: config.py  ip_allowlist.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/execution/: __init__.py  adapters.py
backend/app/normalizer/: __init__.py  prediction_market.py
backend/app/paper/: __init__.py  accounting.py  engine.py  fills.py
backend/app/scoring/: __init__.py  market_quality.py  risk.py
backend/app/services/: asset_market_data.py  bootstrap.py  crypto_market_data.py  ingestion.py  market_data.py  paper_trading.py  polymarket_metadata.py  prediction_orderbook.py  resolution.py  signals.py  usage.py  watchlist.py
backend/app/strategies/: __init__.py  base.py  crypto_threshold.py  macro_calendar.py
backend/app/tools/: __init__.py  hash_password.py  seed_watchlist.py  verify_production.py
backend/app/workers/: __init__.py  common.py  ingest.py  paper_mark.py  resolution.py  signal.py  usage.py
backend/tests/integration/: test_api_smoke.py  test_ingest_tiers.py  test_ip_allowlist.py  test_market_bars.py  (+8 more)
(+122 files in other folders)
