[project]
name = "prediction-radar-backend"
version = "0.1.0"
description = "FastAPI backend for the Prediction Radar V1 paper trading system."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "bcrypt>=4.1.3",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.32",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
